@@ -15,6 +15,8 @@ Changes
 - added sub-command ignore task
 - added command line option --outfile. write output to specified file path
 - added support for passing arguments to tasks on cmd line
+- added command line option --dir (-d) to set current working directory
+- removed dodo-sample sub-command
 
 
 0.4.0 (*2009-10-05*)
